Stacktrace in logs after creating collection with invalid options

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.8.0-rc1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Environment:
      mongo git version: 67ce9707210333ca25f55c7d261ace372414f6a1
      wt git version: 504892301989ec94969f581c071905e1e1175586
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Create a collection with invalid options, then run listCollections:

      db.createCollection("my_coll4", {storageEngine: {wiredtiger: {configString: "key1=val1,key2=val2"}}})
      db.runCommand("listCollections")
      

      trace:

      2014-10-28T16:28:00.546-0400 F -        [conn1] Invalid access at address: 0
      2014-10-28T16:28:00.552-0400 F -        [conn1] Got signal: 11 (Segmentation fault).
      
       0xfe65a6 0xfe6042 0xfe648f 0x7fef141e4cb0 0x983bda 0x9f1a7d 0x9f27f7 0x9f3331 0xbfbfff 0xae4caa 0x7fda0e 0xfa35bd 0x7fef141dce9a 0x7fef132ec31d
      ----- BEGIN BACKTRACE -----
      {"backtrace":[{"b":"400000","o":"BE65A6"},{"b":"400000","o":"BE6042"},{"b":"400000","o":"BE648F"},{"b":"7FEF141D5000","o":"FCB0"},{"b":"400000","o":"583BDA"},{"b":"400000","o":"5F1A7D"},{"b":"400000","o":"5F27F7"},{"b":"400000","o":"5F3331"},{"b":"400000","o":"7FBFFF"},{"b":"400000","o":"6E4CAA"},{"b":"400000","o":"3FDA0E"},{"b":"400000","o":"BA35BD"},{"b":"7FEF141D5000","o":"7E9A"},{"b":"7FEF131F8000","o":"F431D"}],"processInfo":{ "mongodbVersion" : "2.7.9-pre-", "gitVersion" : "67ce9707210333ca25f55c7d261ace372414f6a1", "uname" : { "sysname" : "Linux", "release" : "3.2.0-68-generic", "version" : "#102-Ubuntu SMP Tue Aug 12 22:02:15 UTC 2014", "machine" : "x86_64" }, "somap" : [ { "elfType" : 2, "b" : "400000", "buildId" : "0AC0B96CCD365AB53095FEF7C7E637D4696CDD28" }, { "b" : "7FFF16EFF000", "elfType" : 3, "buildId" : "D918DAF06976A15FE95E4DD168D42B4B4649E538" }, { "b" : "7FEF143F2000", "path" : "/home/dan/wiredtiger/LOCAL_INSTALL/lib/libwiredtiger-2.4.1.so", "elfType" : 3, "buildId" : "A743FAA6DA18D025F6E6FCE23867E2AFFA4C6F12" }, { "b" : "7FEF141D5000", "path" : "/lib/x86_64-linux-gnu/libpthread.so.0", "elfType" : 3, "buildId" : "C340AF9DEE97C17C730F7D03693286C5194A46B8" }, { "b" : "7FEF13FCD000", "path" : "/lib/x86_64-linux-gnu/librt.so.1", "elfType" : 3, "buildId" : "352C5B373A50E6C4AB881A5DB6F5766FDF81EEE0" }, { "b" : "7FEF13DC9000", "path" : "/lib/x86_64-linux-gnu/libdl.so.2", "elfType" : 3, "buildId" : "D181AF551DBBC43E9D55913D532635FDE18E7C4E" }, { "b" : "7FEF13AC9000", "path" : "/usr/lib/x86_64-linux-gnu/libstdc++.so.6", "elfType" : 3, "buildId" : "B534DA725D06A04267EB2FEB92B9CC14C838B57B" }, { "b" : "7FEF137CD000", "path" : "/lib/x86_64-linux-gnu/libm.so.6", "elfType" : 3, "buildId" : "817AA99B3DD02501F8BC04A3E9A9358A08F20D7D" }, { "b" : "7FEF135B7000", "path" : "/lib/x86_64-linux-gnu/libgcc_s.so.1", "elfType" : 3, "buildId" : "ECF322A96E26633C5D10F18215170DD4395AF82C" }, { "b" : "7FEF131F8000", "path" : "/lib/x86_64-linux-gnu/libc.so.6", "elfType" : 3, "buildId" : "E7863FF2EA3F4B5C6FF90689ADE4D6B5F3A78020" }, { "b" : "7FEF146D8000", "path" : "/lib64/ld-linux-x86-64.so.2", "elfType" : 3, "buildId" : "E25AD1A11CCF57E734116B8EC9C69F643DCA9F18" }, { "b" : "7FEF12FE1000", "path" : "/lib/x86_64-linux-gnu/libz.so.1", "elfType" : 3, "buildId" : "F695ECFCF3918D5D34989398A14B7ECDD9F46CD0" }, { "b" : "7FEF12DDB000", "path" : "/usr/lib/libsnappy.so.1", "elfType" : 3, "buildId" : "73722FE265941076386865069324C698E3398297" } ] }}
       mongod(_ZN5mongo15printStackTraceERSo+0x26) [0xfe65a6]
       mongod(+0xBE6042) [0xfe6042]
       mongod(+0xBE648F) [0xfe648f]
       libpthread.so.0(+0xFCB0) [0x7fef141e4cb0]
       mongod(_ZN5mongo18CmdListCollections3runEPNS_16OperationContextERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x5AA) [0x983bda]
       mongod(_ZN5mongo12_execCommandEPNS_16OperationContextEPNS_7CommandERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x3D) [0x9f1a7d]
       mongod(_ZN5mongo7Command11execCommandEPNS_16OperationContextEPS0_iPKcRNS_7BSONObjERNS_14BSONObjBuilderEb+0xB47) [0x9f27f7]
       mongod(_ZN5mongo12_runCommandsEPNS_16OperationContextEPKcRNS_7BSONObjERNS_11_BufBuilderINS_16TrivialAllocatorEEERNS_14BSONObjBuilderEbi+0x561) [0x9f3331]
       mongod(_ZN5mongo11newRunQueryEPNS_16OperationContextERNS_7MessageERNS_12QueryMessageERNS_5CurOpES3_b+0x14DF) [0xbfbfff]
       mongod(_ZN5mongo16assembleResponseEPNS_16OperationContextERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortEb+0xCAA) [0xae4caa]
       mongod(_ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortEPNS_9LastErrorE+0xAE) [0x7fda0e]
       mongod(_ZN5mongo17PortMessageServer17handleIncomingMsgEPv+0x4BD) [0xfa35bd]
       libpthread.so.0(+0x7E9A) [0x7fef141dce9a]
       libc.so.6(clone+0x6D) [0x7fef132ec31d]
      -----  END BACKTRACE  -----
      

            Assignee:
            Mark Benvenuto
            Reporter:
            Daniel Pasette (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: