SERVER-16028: Remote stacktrace in logs after creating collection with invalid options